# Draw_A_Number

./: Dockerfile  README.md  app.py  model_def.py  pyproject.toml  requirements.txt  requirments.txt
templates/: index.html
