[project]
name = "draw-a-number"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.1.7",
    "numpy>=1.26.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
